[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/Enemies/Variant 1/Guard1 (idle).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/MeleeStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/MeleeEnemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Enemies/Variant 1/Guard1 (running).png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 76, 136 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 76, 0, 76, 136 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 84, 132 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 84, 0, 84, 132 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 168, 0, 84, 132 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 132, 84, 132 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.2985, 37.1237 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 96 )

[node name="meleeEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.81512, 27.4612 )
shape = SubResource( 4 )

[node name="stateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="rightRay" type="RayCast2D" parent="."]
position = Vector2( 44.3864, 0 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 8

[node name="leftRay" type="RayCast2D" parent="."]
position = Vector2( -38.6984, 0 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 8

[node name="Label" type="Label" parent="."]
margin_left = -125.725
margin_top = -151.267
margin_right = 2.27521
margin_bottom = -105.267
rect_scale = Vector2( 2, 2 )
text = "IDLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pivot" type="Position2D" parent="."]

[node name="detectorPlayer" type="Area2D" parent="pivot"]
position = Vector2( 69.0656, 14.936 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/detectorPlayer"]
shape = SubResource( 5 )

[node name="attackBox" type="Area2D" parent="pivot"]
position = Vector2( 69.0656, 15.5048 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/attackBox"]
shape = SubResource( 5 )
disabled = true

[node name="rightWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 8

[node name="leftWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 8

[node name="turnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="pivot/detectorPlayer" to="." method="_on_detectorPlayer_body_entered"]
[connection signal="body_exited" from="pivot/detectorPlayer" to="." method="_on_detectorPlayer_body_exited"]
[connection signal="body_entered" from="pivot/attackBox" to="." method="_on_attackBox_body_entered"]
[connection signal="timeout" from="turnTimer" to="." method="_on_turnTimer_timeout"]
